test/files/neg/lazy-override.check
lazy-override.scala:11: error: value must be non-lazy when overriding concrete non-lazy value:
val x: Int (defined in class A)
    override lazy val x: Int = { print("/*B.x*/"); 3 }
                      ^
lazy-override.scala:13: error: value must be lazy when overriding concrete lazy value:
lazy val y: Int (defined in class A)
    override val y: Int = { print("/*B.y*/"); 3 }
                 ^
2 errors
